# multi-ai-agent

./: .env.example  README.md  main.py  pyproject.toml
notebooks/01_projectplanning/: 01_projectplanning.ipynb
notebooks/02_projectprogress/: projectprogress.ipynb  test_asana_api.py
notebooks/02_projectprogress/config/: agents.yaml  tasks.yaml
notebooks/03_complexsetups/config/: email_engagement_agents.yaml  lead_qualification_agents.yaml
notebooks/04_scrape_siegessaeule/: args.json  controlflow_siegessaeule.ipynb  crewai_siegessaeule.ipynb
notebooks/04_scrape_siegessaeule/config/: agents.yaml  tasks.yaml
notebooks/05_controlflow_tests/: 01_research_proposal.ipynb  02_scrape_siegessauele.ipynb
notebooks/projectplanning/: 01_projectplanning.ipynb  helper.py
tests/: test_dummy.py
