[project]
name = "yolo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asana>=5.0.10",
    "crewai[tools]>=0.86.0",
    "mypy>=1.13.0",
    "openai>=1.57.4",
    "pre-commit>=4.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.2",
    "spider-client>=0.1.25",
    "controlflow>=0.11.4",
    "pydantic>=2.10.3",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
]

[tool.ruff]
# Basic settings
line-length = 88
target-version = "py312"

# Essential rules for your current codebase
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
]

# Directories to ignore
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disable_error_code = ["arg-type"]  # Ignore argument type mismatches

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
